fix machine gap on ios

--- a/src/app/components/machinechart/machinechart.component.scss
+++ b/src/app/components/machinechart/machinechart.component.scss
@@ -51,7 +51,9 @@ ion-card-header {
 ion-card-subtitle {
   --background: var(--ion-tab-bar-background) !important;
   background: var(--ion-tab-bar-background) !important;
-  height: 28px;
+  padding-bottom: 0px !important;
+  margin-bottom: 0px !important;
+  height: 24px;
 }
 
 .more-icon {
